--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 __pycache__/
 *.py[cod]
 *$py.class
-*.log
 
 # home assistant
 
@@ -16,8 +15,63 @@ __pycache__/
 .cloud
 .google.token
 
+custom_components
+
 ## Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
 ip_bans.yaml
 known_devices.yaml
 secrets.yaml
 
+# Logs
+logs
+*.log
+# Python cache
+__pycache__
+*.pyc
+
+# Other
+*.uuid
+*.conf
+*.db
+*.db-journal
+*.noload
+*.txt
+*.sqlite
+*.xml
+*.backup
+*.json
+.ip_authenticated.yaml
+ip_bans.yaml
+.config_entries.json
+*.google.token
+.google.token
+.ring_cache.pickle
+.spotify-token-cache
+.storage
+abodepy_cache.pickle
+camera_recording.py
+home-assistant.env
+home-assistant.*
+known_devices.yaml
+entity_registry.yaml
+secrets.yaml
+google_calendars.yaml
+SERVICE_ACCOUNT.json
+components
+deps
+tts
+www/icons
+www/floorplans
+www/community
+custom_components/hacs
+downloads
+icloud
+dlib_faces
+dlib_nofaces
+dlib_known_faces
+dlib_unknown_faces
+.cloud
+*.pickle
+.pc-session
+google*.deb
+.homekit.state
