--- a/includes/ios.yaml
+++ b/includes/ios.yaml
@@ -7,9 +7,57 @@
 # |_|\___/|___/
 #
 #
-#- from github.com/basnijholt/home-assistant-config
+#-
 
 actions:
+  - name: OpenGarage
+    background_color: "#000000" # Requires `use_custom_colors`
+    label:
+      text: "Open Garage"
+      color: "#ff0000" # Requires `use_custom_colors`
+    icon:
+      icon: garage-open
+      color: "#ffffff"
+    show_in_carplay: true
+    show_in_watch: true
+    use_custom_colors: true
+
+  - name: OpenGarageLightOn
+    background_color: "#000000" # Requires `use_custom_colors`
+    label:
+      text: "Open Garage Turn Lights On"
+      color: "#ff0000" # Requires `use_custom_colors`
+    icon:
+      icon: garage-open
+      color: "#ffffff"
+    show_in_carplay: true
+    show_in_watch: true
+    use_custom_colors: true
+
+  - name: CloseGarage
+    background_color: "#000000" # Requires `use_custom_colors`
+    label:
+      text: "Close Garage"
+      color: "#ff0000" # Requires `use_custom_colors`
+    icon:
+      icon: garage-lock
+      color: "#ffffff"
+    show_in_carplay: true
+    show_in_watch: true
+    use_custom_colors: true
+
+  - name: CloseGarageLightOff
+    background_color: "#000000" # Requires `use_custom_colors`
+    label:
+      text: "Close Garage Turn Lights Off"
+      color: "#ff0000" # Requires `use_custom_colors`
+    icon:
+      icon: garage-lock
+      color: "#ffffff"
+    show_in_carplay: true
+    show_in_watch: true
+    use_custom_colors: true
+
   - name: Play TV
     background_color: "#000000"
     label:
